2010-12-17 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #16700: mod2 broken in 1.5.3 when TOs are used / incorrect parameters for t3lib_div::array2xml (Thanks to Andreas Kiessling)

2010-12-05 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #16684: useless visual expansion of the nested section datapreview 
	* Fixed bug: #13822: Cut and paste in workspaces
	* Fixed bug: #11359: When deleting versions of a CE record, page looses reference to the complete record 
	* Fixed bug: #16521: Localize FCEs from the page module (Thanks to Andreas Kiessling)

2010-11-28  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #16587: small typo - dataprot variable misspelled (Thanks to Andreas Lappe)

2010-11-27  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Follow-up to: Fixed bug: #15927: Remove icon »Create new element« if user has no rights to edit the pages content
	* Fixed issue: #16567: Static DS Conversion Wizard does not check if path is writable and has wrong page-path to check (Thanks to Andreas Lappe)

2010-11-22  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15788: Copy content elements in classic page module
	* Fixed issue: #16512: template->middle() - is not required and deprecated since TYPO3 3.6 
	* Fixed issue: #16270: Custom "rendertype" label are not display in TemplaVoilà Control Center
	* Fixed issue: #11582: No more add icon, if maxitem is reached
	* Fixed bug: #15927: Remove icon »Create new element« if user has no rights to edit the pages content
	* Fixed bug: #15925: Buttons in docheader do not respect user rights for pages table
	* Fixed issue: #16324: Let the auto value for TypoScriptObject path depend on field name (Thanks to Christian Mueller)
	* Fixed issue: #16341: Get rid of the full plugin name
	* Fixed issue: #16211: a hsc too much 

2010-11-08  Tolleiv Nietsch <nietsch@aoemedia.de> 
